# FLIM-tool

./: GUI.py  README.md  get_shifts.py  lifetimefit.py  process_counts.py
Sample data/Continuos/: red_shifts.npy  scanParameters.csv  shifts.npy
Sample data/Points/: pix00.txt  pix01.txt  pix02.txt  pix03.txt  pix04.txt  pix05.txt  pix06.txt  pix07.txt  pix08.txt  pix09.txt  pix10.txt  pix11.txt  pix12.txt  pix13.txt  pix14.txt  pix15.txt  pix16.txt  pix17.txt  pix18.txt  pix19.txt  pix20.txt  pix21.txt  pix22.txt  pix23.txt  red_shifts.npy  scanParameters.csv  stack128_138.tif  stack_128_138_params.csv
sofism_lib/: __init__.py  core.py  helpers.py  params.py  parsing.py
sofism_lib/C++ extension/: CMakeLists.txt  corr.cpp
